examples/test/testpolicy12548.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12548
  namespace: namespace59
spec:
  podSelector:
    matchLabels:
      key19: value2
      key11: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value36
          key22: value39
          key35: value29
      podSelector:
        matchLabels:
          key37: value34
